Make a few spellings of colour incorrect

--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -46,7 +46,7 @@ BuildRequires: libXrandr-devel
 BuildRequires: gnome-desktop-devel
 
 %description
-gnome-color-manager provides a way to control ICC colour profiles.
+gnome-color-manager provides a way to control ICC color profiles.
 
 %prep
 %setup -q
