--- a/configure.ac
+++ b/configure.ac
@@ -210,6 +210,7 @@ data/icons/22x22/Makefile
 data/icons/24x24/Makefile
 data/icons/32x32/Makefile
 data/icons/48x48/Makefile
+data/icons/64x64/Makefile
 data/icons/scalable/Makefile
 po/Makefile.in
 ])
