trivial: update README file

--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -46,7 +46,8 @@ BuildRequires: libXrandr-devel
 BuildRequires: gnome-desktop-devel
 
 %description
-gnome-color-manager provides a way to control ICC color profiles.
+gnome-color-manager is a session framework that makes it easy to manage, install
+and generate color profiles in the GNOME desktop.
 
 %prep
 %setup -q
