--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -114,7 +114,7 @@ update-mime-database %{_datadir}/mime &> /dev/null || :
 %{_datadir}/gnome-color-manager/gcm-*.ui
 %{_datadir}/man/man1/*.1.gz
 %{_datadir}/gnome/help/gnome-color-manager
-#%{_datadir}/omf/gnome-color-manager
+%{_datadir}/omf/gnome-color-manager
 %{_datadir}/icons/hicolor/*/*/*.png
 %{_datadir}/icons/hicolor/scalable/*/*.svg*
 %config(noreplace) %{_sysconfdir}/gconf/schemas/*.schemas
