Offer to install argyllcms if it is not installed, and the user wants to calibrate

--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -23,7 +23,7 @@ Requires:  dbus-glib >= %{dbus_glib_version}
 Requires:  dbus-x11
 Requires:  vte
 Requires:  lcms
-Requires:  argyllcms
+Requires:  PackageKit
 Requires:  shared-color-profiles
 Requires(post):   scrollkeeper
 Requires(pre):    GConf2
