Add a simple gamma widget to calibrate the display without hardware

--- a/data/tests/Makefile.am
+++ b/data/tests/Makefile.am
@@ -1,5 +1,7 @@
 TEST_FILES =						\
 	cie-widget.png					\
+	trc-widget.png					\
+	gamma-widget.png				\
 	Lenovo-T61-Internal.bin				\
 	LG-L225W-External.bin
 
