Add an experimental user-calibrate wizard, which the user can use when there is no calibration hardware available

--- a/data/Makefile.am
+++ b/data/Makefile.am
@@ -27,6 +27,7 @@ $(service_DATA): $(service_in_files) Makefile
 	@sed -e "s|\@servicedir\@|$(bindir)|" $< > $@
 
 pkgdata_DATA =						\
+	gcm-calibrate.ui				\
 	gcm-spawn.ui					\
 	gcm-prefs.ui
 
