--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -1,17 +1,20 @@
-[type: gettext/glade]data/gcm-calibrate.ui
 data/gcm-apply.desktop.in
 data/gcm-import.desktop.in
 data/gcm-prefs.desktop.in
-[type: gettext/glade]data/gcm-prefs.ui
 data/gnome-color-manager.schemas.in
 src/egg-debug.c
 src/gcm-calibrate.c
+src/gcm-calibrate-manual.c
 src/gcm-client.c
-src/gcm-inspect.c
+src/gcm-dump-edid.c
+src/gcm-dump-profile.c
 src/gcm-import.c
+src/gcm-inspect.c
 src/gcm-prefs.c
 src/gcm-profile.c
-src/gcm-utils.c
 src/gcm-session.c
-src/gcm-dump-profile.c
+src/gcm-utils.c
+[type: gettext/glade]data/gcm-calibrate.ui
+[type: gettext/glade]data/gcm-prefs.ui
+[type: gettext/glade]data/gcm-spawn.ui
 
