Correctly namespace the argyll-specific calibration routines so we can have manual calibration as an option

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -3,7 +3,7 @@ data/gcm-import.desktop.in
 data/gcm-prefs.desktop.in
 data/gnome-color-manager.schemas.in
 src/egg-debug.c
-src/gcm-calibrate.c
+src/gcm-calibrate-argyll.c
 src/gcm-calibrate-manual.c
 src/gcm-client.c
 src/gcm-dump-edid.c
