trivial: share calibration state in a central place, GcmCalibration

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -146,6 +146,8 @@ gcm_import_CFLAGS =					\
 	$(WARNINGFLAGS_C)
 
 gcm_prefs_SOURCES =					\
+	gcm-calibrate.c					\
+	gcm-calibrate.h					\
 	gcm-calibrate-argyll.c				\
 	gcm-calibrate-argyll.h				\
 	gcm-calibrate-manual.c				\
@@ -209,6 +211,7 @@ gcm_self_test_SOURCES =					\
 	gcm-cie-widget.c				\
 	gcm-trc-widget.c				\
 	gcm-gamma-widget.c				\
+	gcm-calibrate.c					\
 	gcm-calibrate-manual.c				\
 	egg-test.h					\
 	egg-test.c					\
