Add a simple GcmImage class that makes embedded color profiles 'just work'
This requires GTK+2 2.29.2 to work, but builds with any version

--- a/data/tests/Makefile.am
+++ b/data/tests/Makefile.am
@@ -1,7 +1,12 @@
 TEST_FILES =						\
 	cie-widget.png					\
-	trc-widget.png					\
 	gamma-widget.png				\
+	ibm-t61.icc					\
+	image-widget-good.png				\
+	image-widget-nonembed.png			\
+	image-widget-output.png				\
+	image-widget.png				\
+	trc-widget.png					\
 	Lenovo-T61-Internal.bin				\
 	LG-L225W-External.bin
 
