trivial: add some internal checks to try to debug #605839

--- a/configure.ac
+++ b/configure.ac
@@ -148,6 +148,7 @@ AC_SUBST(GUDEV_LIBS)
 PKG_CHECK_MODULES(LCMS, lcms)
 AC_SUBST(LCMS_CFLAGS)
 AC_SUBST(LCMS_LIBS)
+AC_DEFINE(GCM_HAVE_LCMS,1,[we have LCMS support])
 
 PKG_CHECK_MODULES(DBUS_GLIB, dbus-glib-1 >= $DBUS_GLIB_REQUIRED)
 AC_SUBST(DBUS_GLIB_CFLAGS)
