Add a PolicyKit rule for the future system-wide profiles install

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,9 @@
 SUBDIRS = 						\
-	po						\
+	data						\
 	help						\
 	man						\
-	data						\
+	po						\
+	policy						\
 	rules						\
 	src
 
