--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -2,9 +2,10 @@ data/gcm-apply.desktop.in
 data/gcm-import.desktop.in
 data/gcm-prefs.desktop.in
 data/gnome-color-manager.schemas.in
+policy/org.gnome.color.policy.in
 src/egg-debug.c
-src/gcm-calibrate.c
 src/gcm-calibrate-argyll.c
+src/gcm-calibrate.c
 src/gcm-calibrate-manual.c
 src/gcm-client.c
 src/gcm-dump-edid.c
