Add gcm-fix-profile to load and then re-save existing profiles using lcms

--- a/src/.gitignore
+++ b/src/.gitignore
@@ -9,6 +9,7 @@ gcm-inspect
 gcm-session
 gcm-dump-edid
 gcm-dump-profile
+gcm-fix-profile
 gcm-self-test
 gcm-install-system-wide
 org.gnome.ColorManager.h
