trivial: use Fogra27L by default for the CMYK colorspace

--- a/data/gnome-color-manager.schemas.in
+++ b/data/gnome-color-manager.schemas.in
@@ -82,7 +82,7 @@
       <applyto>/apps/gnome-color-manager/colorspace_cmyk</applyto>
       <owner>gnome-color-manager</owner>
       <type>string</type>
-      <default></default>
+      <default>/usr/share/color/icc/Fogra27L.icc</default>
       <locale name="C">
         <short>The default CMYK profile.</short>
         <long>The CMYK profile filename to be used by applications by default.</long>
