Add GcmProfileStore a run-time smart list of profiles that are kept in memory
This removes the need to keep parsing the same profiles, and should
allow us to speed up the client tools, and make them more maintainable

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -51,6 +51,8 @@ libgcmshared_a_SOURCES =				\
 	gcm-trc-widget.h				\
 	gcm-gamma-widget.c				\
 	gcm-gamma-widget.h				\
+	gcm-profile-store.c				\
+	gcm-profile-store.h				\
 	gcm-profile-lcms1.c				\
 	gcm-profile-lcms1.h				\
 	gcm-profile.c					\
