trivial: fix make check

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -10,6 +10,7 @@ src/gcm-calibrate-manual.c
 src/gcm-client.c
 src/gcm-dump-edid.c
 src/gcm-dump-profile.c
+src/gcm-fix-profile.c
 src/gcm-install-system-wide.c
 src/gcm-import.c
 src/gcm-inspect.c
