It turns out gnome_rr_screen_new() is pretty slow. Cache this and take 0.7 seconds off the start time

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,6 +26,8 @@ libgcmshared_a_SOURCES =				\
 	egg-debug.h					\
 	gcm-image.c					\
 	gcm-image.h					\
+	gcm-screen.c					\
+	gcm-screen.h					\
 	gcm-xyz.c					\
 	gcm-xyz.h					\
 	gcm-utils.c					\
