Make the profiles from volumes feature a GConf configurable

--- a/data/gnome-color-manager.schemas.in
+++ b/data/gnome-color-manager.schemas.in
@@ -11,8 +11,10 @@
         <short>The default gamma to use for monitors with no previous selection.</short>
         <long>
           Gamma is adjusted to affect the color of the attached monitor.
-          Traditionally Linux has used a gamma value of 1.0, but this makes monitors look washed out compared Windows XP or OSX.
-          Apple traditionally used a value of 1.8 for a long time, but now use the same value as Microsoft.
+          Traditionally Linux has used a gamma value of 1.0, but this makes
+          monitors look washed out compared Windows XP or OSX.
+          Apple traditionally used a value of 1.8 for a long time, but now use
+          the same value as Microsoft.
           Microsoft has always used a value of 2.2.</long>
       </locale>
     </schema>
@@ -30,6 +32,23 @@
     </schema>
 
     <schema>
+      <key>/schemas/apps/gnome-color-manager/use_profiles_from_volumes</key>
+      <applyto>/apps/gnome-color-manager/use_profiles_from_volumes</applyto>
+      <owner>gnome-color-manager</owner>
+      <type>bool</type>
+      <default>true</default>
+      <locale name="C">
+        <short>If ICC profiles should be loaded from external disks.</short>
+        <long>
+          If set to TRUE then external disks are searched for device ICC profiles
+          at startup, for instance looking in the OSX library folder or
+          Windows XP system folders.
+          This may increase startup time if disks need to be spun-up to be searched.
+        </long>
+      </locale>
+    </schema>
+
+    <schema>
       <key>/schemas/apps/gnome-color-manager/set_icc_profile_atom</key>
       <applyto>/apps/gnome-color-manager/set_icc_profile_atom</applyto>
       <owner>gnome-color-manager</owner>
@@ -37,7 +56,10 @@
       <default>true</default>
       <locale name="C">
         <short>Set the _ICC_PROFILE atom for applications.</short>
-        <long>If set to TRUE then the __ICC_PROFILE atom will be set, which applications use to convert true color to screen color.</long>
+        <long>
+          If set to TRUE then the __ICC_PROFILE atom will be set, which
+          applications use to convert true color to screen color.
+        </long>
       </locale>
     </schema>
 
