--- a/data/gnome-color-manager.schemas.in
+++ b/data/gnome-color-manager.schemas.in
@@ -111,6 +111,23 @@
       </locale>
     </schema>
 
+    <schema>
+      <key>/schemas/apps/gnome-color-manager/calibration_length</key>
+      <applyto>/apps/gnome-color-manager/calibration_length</applyto>
+      <owner>gnome-color-manager</owner>
+      <type>string</type>
+      <default>short</default>
+      <locale name="C">
+        <short>The default calibration length.</short>
+        <long>
+          The length of calibration, as this is proportional to the accuracy.
+          The option 'short' creates a quick profile, 'normal' a regular one,
+          and 'long' takes a really long time, but is more precise and creates
+          a better profile.
+        </long>
+      </locale>
+    </schema>
+
   </schemalist>
 </gconfschemafile>
 
