trivial: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,11 @@ missing
 stamp-h1
 test
 *.make
+*.mo
 mkinstalldirs
 NEWS.new*
 intltool-extract.in
 intltool-merge.in
 intltool-update.in
+.acb
 
