--- a/contrib/gnome-color-manager.spec.in
+++ b/contrib/gnome-color-manager.spec.in
@@ -24,6 +24,7 @@ Requires:  dbus-x11
 Requires:  udev
 Requires:  vte
 Requires:  lcms
+Requires:  cups
 Requires:  polkit
 Requires:  PackageKit
 Requires:  shared-color-profiles
@@ -49,6 +50,7 @@ BuildRequires: libXxf86vm-devel
 BuildRequires: libXrandr-devel
 BuildRequires: gnome-desktop-devel
 BuildRequires: lcms-devel
+BuildRequires: cups-devel
 
 %description
 gnome-color-manager is a session framework that makes it easy to manage, install
