Add a small thumbnail of the target type if it is available

--- a/configure.ac
+++ b/configure.ac
@@ -249,6 +249,7 @@ data/icons/48x48/Makefile
 data/icons/64x64/Makefile
 data/icons/scalable/Makefile
 data/tests/Makefile
+data/targets/Makefile
 help/Makefile
 man/Makefile
 policy/Makefile
