Add a target image of the ColorCheckerDC
Signed-off-by: Richard Hughes <richard@hughsie.com>

--- a/data/targets/Makefile.am
+++ b/data/targets/Makefile.am
@@ -1,6 +1,7 @@
 targetsdir = $(datadir)/gnome-color-manager/targets
 targets_DATA =					\
 	unknown.png				\
+	ColorCheckerDC.png			\
 	it8.png
 
 EXTRA_DIST =					\
