Add three more target thumbnails
Signed-off-by: Richard Hughes <richard@hughsie.com>

--- a/data/targets/Makefile.am
+++ b/data/targets/Makefile.am
@@ -2,7 +2,9 @@ targetsdir = $(datadir)/gnome-color-manager/targets
 targets_DATA =					\
 	unknown.png				\
 	ColorCheckerDC.png			\
-	it8.png
+	ColorChecker24.png			\
+	CMP-DigitalTarget3.png			\
+	IT872.png
 
 EXTRA_DIST =					\
 	$(targets_DATA)
