Add the QPcard 210 thumbnail
Signed-off-by: Richard Hughes <richard@hughsie.com>

--- a/data/targets/Makefile.am
+++ b/data/targets/Makefile.am
@@ -4,6 +4,7 @@ targets_DATA =					\
 	ColorCheckerDC.png			\
 	ColorChecker24.png			\
 	CMP-DigitalTarget3.png			\
+	QPcard_201.png				\
 	IT872.png
 
 EXTRA_DIST =					\
