trivial: use the new target file

--- a/data/targets/Makefile.am
+++ b/data/targets/Makefile.am
@@ -5,6 +5,7 @@ targets_DATA =					\
 	ColorChecker24.png			\
 	CMP-DigitalTarget3.png			\
 	QPcard_201.png				\
+	i1_RGB_Scan_14.png			\
 	IT872.png
 
 EXTRA_DIST =					\
